Remove all tests and test dependencies